2002-12-31  Alan W. Irwin <airwin@users.sourceforge.net>

	* Changed version number of PLplot package *and* associated
	  libraries to 5.2.0 in anticipation of the forthcoming release.  To
	  get this to work properly must have a fresh checkout or else run
	  'make distclean' before trying this change.

2002-12-31  Alan W. Irwin <airwin@users.sourceforge.net>

	* Finished Java swig-based interface to Plplot for now.  Current
	  limitations are detailed in bindings/java/README.javaAPI.

	* Made the appropriate python interface changes so we are now
	  uniformly based on swig version 1.3.17 for both our java and
	  python interfaces!  The required changes turned out to be minimal,
	  but absolutely necessary because of a paradigm shift that occurred
	  in the swig approach for earlier versions of the unstable swig
	  1.3.x series.

2002-12-30  Alan W. Irwin <airwin@users.sourceforge.net>

	* Implement plParseOpts for new Java interface and change all
	  examples to use it again.

2002-12-29   Maurice LeBrun <mlebrun@users.sourceforge.net>

	* bindings/tk: added sample app-defaults files, howto on their
	  use, and code to suck the app-defaults file "PLplot" into the
	  options db, which is then used to set geometry, fonts, colors,
	  etc.

2002-12-29  Alan W. Irwin <airwin@users.sourceforge.net>

	* Implement additional 2-d arrays for the swig-based Java API. These
	  new typemaps allow plcont (and x09.java) to work.  Note, only the
	  2-d version is implemented, there is no angle wrap code, and kx,
	  lx, ky, ly always have to be in the argument list.  In other words
	  this is the raw java interface to PLplot.  Thus, a number of
	  adjustments had to be made to x09.java to work with this raw
	  interface.  However, once the user-friendly interface is done, it
	  should be possible to overload 1-d arrays when needed for xg0
	  through yg1, have angle wrap code, and also drop kx, lx, ky, ly.

	* Implement typemaps for defined_func and fill_func which allow